working on 3rd homework

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,8 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appCompatVersion"
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanary"
     implementation "com.google.android.material:material:$materialVersion"
-
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swipeRefreshLayout"
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    implementation "com.github.bumptech.glide:annotations:$glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 }
