--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,8 @@ dependencies {
     implementation "com.github.bumptech.glide:annotations:$glideVersion"
     implementation "net.danlew:android.joda:$jodaTime"
     annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava2Version"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroidVersion"
+    implementation "io.reactivex.rxjava2:rxkotlin:$rxkotlinVersion"
+    implementation "com.facebook.shimmer:shimmer:$shimmerAndroidVersion"
 }
