--- a/build.gradle
+++ b/build.gradle
@@ -37,4 +37,8 @@ ext {
     glideVersion = "4.11.0"
     jodaTime = "2.10.6.1"
     constraintLayout = "2.0.2"
+    rxjava2Version = "2.2.8"
+    rxandroidVersion = "2.0.1"
+    rxkotlinVersion = "2.2.0"
+    shimmerAndroidVersion = "0.5.0"
 }
