--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,11 @@ ext {
     rxandroidVersion = "2.0.1"
     rxkotlinVersion = "2.2.0"
     shimmerAndroidVersion = "0.5.0"
+    vkSDKVersion = "2.2.3"
+    retrofitVersion = "2.7.1"
+    retroRxAdapterVersion= "2.7.1"
+    retrofitGsonConverterVersion = "2.4.0"
+    googleGsonVersion = "2.8.6"
+    httpLoggingInterceptorVersion = "4.9.0"
+    okhttpVersion = "4.9.0"
 }
