--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
@@ -41,11 +42,15 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swipeRefreshLayout"
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     implementation "com.github.bumptech.glide:annotations:$glideVersion"
+
+    //pretty time
     implementation "net.danlew:android.joda:$jodaTime"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
+    kapt "com.github.bumptech.glide:compiler:$glideVersion"
     implementation "io.reactivex.rxjava2:rxjava:$rxjava2Version"
     implementation "io.reactivex.rxjava2:rxandroid:$rxandroidVersion"
     implementation "io.reactivex.rxjava2:rxkotlin:$rxkotlinVersion"
+
+    // facebook loading effect
     implementation "com.facebook.shimmer:shimmer:$shimmerAndroidVersion"
 
     //retrofit dependencies
@@ -56,5 +61,11 @@ dependencies {
     implementation "com.google.code.gson:gson:$googleGsonVersion"
     implementation "com.squareup.okhttp3:logging-interceptor:$httpLoggingInterceptorVersion"
     implementation "com.squareup.okhttp3:okhttp:$okhttpVersion"
+
+    //vk sdk
     implementation "com.vk:androidsdk:$vkSDKVersion"
+
+    implementation "androidx.room:room-runtime:$roomRuntimeVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+    implementation "androidx.room:room-rxjava2:$roomRxjavaVersion"
 }
