final work reserv2

--- a/build.gradle
+++ b/build.gradle
@@ -37,19 +37,23 @@ ext {
     swipeRefreshLayout = '1.1.0'
     glideVersion = "4.11.0"
     jodaTime = "2.10.6.1"
-    constraintLayout = "2.0.3"
+    constraintLayout = "2.0.4"
     rxjava2Version = "2.2.8"
-    rxandroidVersion = "2.0.1"
+    rxandroidVersion = "2.1.1"
     rxkotlinVersion = "2.2.0"
     shimmerAndroidVersion = "0.5.0"
     vkSDKVersion = "2.2.3"
-    retrofitVersion = "2.7.1"
-    retroRxAdapterVersion= "2.7.1"
-    retrofitGsonConverterVersion = "2.4.0"
+    retrofitVersion = "2.9.0"
+    retroRxAdapterVersion= "2.9.0"
+    retrofitGsonConverterVersion = "2.9.0"
     googleGsonVersion = "2.8.6"
     httpLoggingInterceptorVersion = "4.9.0"
     okhttpVersion = "4.9.0"
     roomRuntimeVersion = "2.2.5"
     roomVersion = "2.2.1"
     roomRxjavaVersion = "2.2.5"
+    daggerVersion="2.29.1"
+    moxyVersion = "2.0.2"
+    moxyCompilerVersion = "0.4.2"
+    preferenceVersion = "1.1.1"
 }
