--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildTypes {
@@ -32,20 +37,27 @@ android {
 }
 
 dependencies {
+    //common android
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.core:core-ktx:$coreKtxVersion"
     implementation "androidx.appcompat:appcompat:$appCompatVersion"
     implementation "androidx.constraintlayout:constraintlayout:$constraintLayout"
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanary"
     implementation "com.google.android.material:material:$materialVersion"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swipeRefreshLayout"
-    implementation "com.github.bumptech.glide:glide:$glideVersion"
-    implementation "com.github.bumptech.glide:annotations:$glideVersion"
+
+    //leak canary
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanary"
 
     //pretty time
     implementation "net.danlew:android.joda:$jodaTime"
+
+    //images loading
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    implementation "com.github.bumptech.glide:annotations:$glideVersion"
+
+    //rxjava2
     implementation "io.reactivex.rxjava2:rxjava:$rxjava2Version"
     implementation "io.reactivex.rxjava2:rxandroid:$rxandroidVersion"
     implementation "io.reactivex.rxjava2:rxkotlin:$rxkotlinVersion"
@@ -53,19 +65,34 @@ dependencies {
     // facebook loading effect
     implementation "com.facebook.shimmer:shimmer:$shimmerAndroidVersion"
 
-    //retrofit dependencies
+    //retrofit and network dependencies
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitGsonConverterVersion"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retroRxAdapterVersion"
-
-    implementation "com.google.code.gson:gson:$googleGsonVersion"
     implementation "com.squareup.okhttp3:logging-interceptor:$httpLoggingInterceptorVersion"
     implementation "com.squareup.okhttp3:okhttp:$okhttpVersion"
+    implementation "com.google.code.gson:gson:$googleGsonVersion"
+
 
     //vk sdk
     implementation "com.vk:androidsdk:$vkSDKVersion"
 
+    //room
     implementation "androidx.room:room-runtime:$roomRuntimeVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
     implementation "androidx.room:room-rxjava2:$roomRxjavaVersion"
+
+    //dagger2
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+
+    //moxy
+    kapt "com.arello-mobile:moxy-compiler:$moxyCompilerVersion"
+    implementation "com.github.moxy-community:moxy:$moxyVersion"
+    implementation "com.github.moxy-community:moxy-androidx:$moxyVersion"
+    kapt "com.github.moxy-community:moxy-compiler:$moxyVersion"
+
+    // preferences
+//    implementation "androidx.preference:preference:$preferenceVersion"
+    implementation "androidx.preference:preference-ktx:$preferenceVersion"
 }
